--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,19 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+.list-all{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.top{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.btn-add-movie{
+  float: right;
+}
