--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <h1>New Bookmark</h1>
+  <h1 class="mt-5 mb-5" >New Bookmark</h1>
 
   <%= simple_form_for [@list, @bookmark] do |f| %>
     <%= f.input :comment %>
     <%= f.association :movie,   as: :radio_buttons %>
-    <%= f.button :submit %>
+    <%= f.button :submit, class: "btn btn-success mb-5" %>
   <% end %>
 </div>
