--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,7 +5,8 @@
   </div>
 </div>
 
-
+<%= cl_image_tag("rqwixtfiegoxnmc5u9aj",
+      width: 400, height: 300, crop: :fill) %>
 
 
 <div class="container py-5">
