--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,10 @@
 .list-all{
   width: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
+  flex-flow: row wrap;
+
 }
 
 .top{
